--- a/package.json
+++ b/package.json
@@ -56,10 +56,14 @@
     "@codesandbox/sandpack-themes": "^2.0.21",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.15",
     "@types/lodash": "^4.14.199",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@umijs/lint": "^4.0.0",
+    "antd": "^5.10.2",
     "dumi": "^2.2.9",
     "esbuild-plugin-less": "^1.3.1",
     "eslint": "^8.23.0",
