--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "use-react-form",
+  "name": "react-form-simple",
   "version": "0.0.1",
   "description": "A form library for quickly controlling react form input",
   "keywords": [
