feat: add v1.1.0 or release or tag

--- a/.release-it.json
+++ b/.release-it.json
@@ -1,6 +1,7 @@
 {
     "github": {
       "release": true,
+      "tokenRef": "GITHUB_TOKEN",
       "comments": {
         "submit": true,
         "issue": ":rocket: _This issue has been resolved in v${version}. See [${releaseName}](${releaseUrl}) for release notes._",
