feat: add v1.1.0 or release or tags

--- a/.release-it.json
+++ b/.release-it.json
@@ -16,7 +16,7 @@
         "tag": true,
         "requireCommits": false,
         "requireCleanWorkingDir": false,
-        "requireBranch": "main",
+        "requireBranch": "master",
         "tagName": "v${version}"
     },
     "npm": { 
