feat: add v1.10.0 or release or tag

--- a/.release-it.json
+++ b/.release-it.json
@@ -20,7 +20,8 @@
         "tagName": "v${version}"
     },
     "npm": { 
-        "publish": true
+        "publish": true,
+        "ignoreVersion": true
     },
     "plugins": {
       "@release-it/conventional-changelog": {
