feat: add v1.10.0 or release or tag

--- a/.release-it.json
+++ b/.release-it.json
@@ -27,7 +27,7 @@
       "@release-it/conventional-changelog": {
         "header": "# Changelog",
         "preset": {
-          "name": "angular",
+          "name": "conventionalcommits",
           "types": [
             {
               "type": "feat",
