docs: docs README.md

--- a/.dumi/tsconfig.json
+++ b/.dumi/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "include": [
-    "theme/builtins/**/*"   
+    "theme/builtins/**/*",
+    "metadata/demos/**/*"
   ],
 }
