--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "prepare": "husky install && dumi setup",
     "prepublishOnly": "father doctor && npm run build",
     "start": "npm run dev",
-    "release": "release-it"
+    "release": "release-it",
+    "test": "vitest src",
+    "coverage": "vitest run --coverage",
+    "testUi": "vitest src --ui"
   },
   "commitlint": {
     "extends": [
@@ -70,6 +73,7 @@
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.1.2",
     "@codesandbox/sandpack-react": "^2.9.0",
     "@codesandbox/sandpack-themes": "^2.0.21",
     "@commitlint/cli": "^17.1.2",
@@ -77,10 +81,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.15",
+    "@release-it/conventional-changelog": "7.0.2",
     "@types/lodash": "^4.14.199",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@umijs/lint": "^4.0.0",
+    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/ui": "^0.34.6",
     "antd": "^5.10.2",
     "dumi": "^2.2.9",
     "esbuild-plugin-less": "^1.3.1",
@@ -88,6 +95,7 @@
     "father": "^4.1.0",
     "highlight.js": "^11.9.0",
     "husky": "^8.0.1",
+    "jsdom": "^23.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^3.0.0",
@@ -95,10 +103,10 @@
     "react": "^18.0.0",
     "react-docgen-typescript": "^2.2.2",
     "react-dom": "^18.0.0",
+    "release-it": "^16.2.1",
     "simplebar-react": "^3.2.4",
     "stylelint": "^14.9.1",
-    "release-it": "^16.2.1",
-    "@release-it/conventional-changelog": "7.0.2"
+    "vitest": "^0.34.6"
   },
   "peerDependencies": {
     "react": ">=16.9.0",
