--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "prepare": "husky install && dumi setup",
     "prepublishOnly": "father doctor && npm run build",
     "start": "npm run dev",
-    "release": "release-it",
     "test": "vitest src",
     "coverage": "vitest run --coverage",
-    "testUi": "vitest src --ui"
+    "testUi": "vitest src --ui",
+    "version:git": "git add . && git commit -m \"chore(release): v${npm_package_version}\"",
+    "version:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "commitlint": {
     "extends": [
@@ -73,7 +74,6 @@
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.1.2",
     "@codesandbox/sandpack-react": "^2.9.0",
     "@codesandbox/sandpack-themes": "^2.0.21",
     "@commitlint/cli": "^17.1.2",
@@ -82,6 +82,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.15",
     "@release-it/conventional-changelog": "7.0.2",
+    "@testing-library/react": "^14.1.2",
     "@types/lodash": "^4.14.199",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -89,6 +90,7 @@
     "@vitest/coverage-v8": "^0.34.6",
     "@vitest/ui": "^0.34.6",
     "antd": "^5.10.2",
+    "conventional-changelog": "^5.1.0",
     "dumi": "^2.2.9",
     "esbuild-plugin-less": "^1.3.1",
     "eslint": "^8.23.0",
@@ -103,7 +105,6 @@
     "react": "^18.0.0",
     "react-docgen-typescript": "^2.2.2",
     "react-dom": "^18.0.0",
-    "release-it": "^16.2.1",
     "simplebar-react": "^3.2.4",
     "stylelint": "^14.9.1",
     "vitest": "^0.34.6"
