--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "@vitest/coverage-v8": "^0.34.6",
     "@vitest/ui": "^0.34.6",
     "antd": "^5.10.2",
-    "conventional-changelog": "^5.1.0",
+    "conventional-changelog-cli": "^4.1.0",
     "dumi": "^2.2.9",
     "esbuild-plugin-less": "^1.3.1",
     "eslint": "^8.23.0",
