docs: add docs footer🎉

--- a/.dumi/tsconfig.json
+++ b/.dumi/tsconfig.json
@@ -3,6 +3,7 @@
   "include": [
     "theme/builtins/**/*",
     "metadata/demos/**/*",
-    "theme/slots/**/*"
+    "theme/slots/**/*",
+    "component/**/*"
   ],
 }
