--- a/.github/workflows/sync-gitee.yml
+++ b/.github/workflows/sync-gitee.yml
@@ -17,6 +17,6 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_SSH_KEY }}
         with:
           # GitHub 源仓库地址
-          source-repo: git@github.com:easy-form/react-form-simple.git
+          source-repo: https://github.com/easy-form/react-form-simple.git
           # Gitee 目标仓库地址
           destination-repo: git@gitee.com:easy-form/react-form-simple.git
