--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-form-simple",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "description": "A form library for quickly controlling react form input",
   "keywords": [
     "react",
@@ -14,9 +14,6 @@
     "type": "git",
     "url": "https://github.com/easy-form/react-form-simple.git"
   },
-  "registry": [
-    "https://registry.npmjs.org"
-  ],
   "license": "MIT",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -26,6 +23,7 @@
   "scripts": {
     "build": "father build",
     "build:watch": "father dev",
+    "coverage": "vitest run --coverage",
     "dev": "dumi dev",
     "docs:build": "dumi build",
     "doctor": "father doctor",
@@ -40,10 +38,9 @@
     "prepublishOnly": "father doctor && npm run build",
     "start": "npm run dev",
     "test": "vitest src",
-    "coverage": "vitest run --coverage",
     "testUi": "vitest src --ui",
-    "version:git": "git add . && git commit -m \"chore(release): v${npm_package_version}\"",
-    "version:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+    "version:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "version:git": "git add . && git commit -m \"chore(release): v${npm_package_version}\""
   },
   "commitlint": {
     "extends": [
@@ -118,5 +115,8 @@
   },
   "authors": [
     "wed97land@outlook.com"
+  ],
+  "registry": [
+    "https://registry.npmjs.org"
   ]
 }
