--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-form-simple",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "A form library for quickly controlling react form input",
   "keywords": [
     "react",
@@ -39,7 +39,7 @@
     "start": "npm run dev",
     "test": "vitest src",
     "testUi": "vitest src --ui",
-    "version:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "version:changelog": "git pull && conventional-changelog -p angular -i CHANGELOG.md -s",
     "version:git": "git add . && git commit -m \"chore(release): v${npm_package_version}\""
   },
   "commitlint": {
