--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "start": "npm run dev",
     "test": "vitest src",
     "testUi": "vitest src --ui",
-    "version:changelog": "git pull && conventional-changelog -p angular -i CHANGELOG.md -s",
+    "version:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "version:git": "git add . && git commit -m \"chore(release): v${npm_package_version}\""
   },
   "commitlint": {
