--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "prettier-plugin-organize-imports": "^3.0.0",
     "prettier-plugin-packagejson": "^2.2.18",
     "react": "^18.0.0",
+    "react-awesome-reveal": "^4.2.12",
     "react-docgen-typescript": "^2.2.2",
     "react-dom": "^18.0.0",
     "simplebar-react": "^3.2.4",
