docs: add docs api

--- a/docs/api/apiChildJSON/docs_api_apiDocs_renderConfig.json
+++ b/docs/api/apiChildJSON/docs_api_apiDocs_renderConfig.json
@@ -206,7 +206,7 @@
     "defaultValue": null,
     "name": "contextProps",
     "type": {
-      "name": "ContextProps"
+      "name": "ContextProps<Record<string, any>>"
     },
     "tags": {
       "localKey": "API.form.global.props.form.share.contextProps",
